.k8s/basic_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-basic
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basic-nginx
      tier: backend
  template:
    metadata:
      labels:
        app: basic-nginx
        tier: backend
    spec:
      containers:
        - name: nginx
          image: basic-nginx
          imagePullPolicy: Never
          ports:
            - containerPort: 80
