.k8s/basic_nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-nginx
  labels:
    tier: backend
spec:
  selector:
    app: basic-nginx
    tier: backend
  ports:
    - protocol: TCP
      port: 80
