.k8s/basic_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basicIngress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: basic-nginx
                port:
                  number: 80
